--- a/timer/index.css
+++ b/timer/index.css
@@ -1,7 +1,4 @@
-@font-face {
-    font-family: Renogare;
-    src: url("/infopane/res/Renogare-Regular.otf") format("opentype");
-}
+ @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -9,7 +6,7 @@
 }
 
 body {
-    font-family: Renogare, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 40px;
 }
 
